fixed horizontal scroll issue on features page

--- a/styles.css
+++ b/styles.css
@@ -1206,7 +1206,12 @@ h1, h2, h3 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 240px;
+}
+
+@media (min-width: 480px) {
+  .dl-pro .pro-features ul {
+    height: 240px;
+  }
 }
 
 .dl-pro .pro-features li {
